[package]
name = "stac-async"
version = "0.3.0"
edition = "2021"
description = "Asynchronous I/O for stac-rs"
documentation = "https://docs.rs/stac-async"
readme = "README.md"
repository = "https://github.com/gadomski/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version ="0.11", features = ["json"] }
serde = "1"
serde_json = "1"
stac = { version = "0.3", path = "../stac" }
stac-api = { version = "0.1", path = "../stac-api" }
thiserror = "1"
tokio = { version = "1.23", features = ["fs", "io-util"] }
url = "2"

[dev-dependencies]
mockito = "0.32"
tokio = { version = "1.23", features = ["rt", "macros"] }
tokio-test = { version = "0.4" }
