[package]
name = "stac-cli"
version = "0.0.8"
edition = "2021"
description = "Command line interface for stac-rs"
documentation = "https://docs.rs/stac-cli"
readme = "README.md"
repository = "https://github.com/gadomski/stac-incubator-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[features]
default = ["gdal", "pgstac"]
gdal = ["stac/gdal"]
pgstac = ["dep:pgstac", "stac-server/pgstac"]

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
pgstac = { version = "0.0.6", path = "../pgstac", optional = true }
reqwest = "0.12"
serde = "1"
serde_json = "1"
stac = { version = "0.6", path = "../stac" }
stac-api = { version = "0.3", path = "../stac-api" }
stac-async = { version = "0.5", path = "../stac-async" }
stac-server = { version = "0.1", path = "../stac-server", features = [
    "memory-item-search",
] }
stac-validate = { version = "0.1", path = "../stac-validate" }
thiserror = "1"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[dev-dependencies]
assert_cmd = "2"

[[bin]]
name = "stac"
path = "src/main.rs"
doc = false
test = false
