[package]
name = "stac-geoparquet"
version = "0.0.1"
edition = "2021"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Read and write STAC GeoParquet"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo"]
categories = ["science", "data-structures"]

[features]
default = ["compression"]
compression = [
    "geoarrow/parquet_compression",
    "parquet/snap",
    "parquet/brotli",
    "parquet/flate2",
    "parquet/lz4",
    "parquet/zstd",
]

[dependencies]
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "509c25296133e0fe6bf946a1a9715ea17fb0633d", features = [
    "parquet",
] }
parquet = { version = "52", default-features = false }
stac = { version = "0.8", path = "../stac" }
stac-arrow = { version = "0.0.1", path = "../stac-arrow" }
thiserror = "1"
