[package]
name = "stac-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["axum", "memory-item-search"]
axum = ["dep:axum"]
memory-item-search = ["stac-api/geo"]
pgstac = ["dep:pgstac", "dep:bb8", "dep:bb8-postgres", "dep:tokio-postgres"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
http = "1"
pgstac = { version = "0.0.6", path = "../pgstac", optional = true }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.6", path = "../stac" }
stac-api = { version = "0.3", path = "../stac-api" }
stac-async = { version = "0.5", path = "../stac-async" }
thiserror = "1"
tokio-postgres = { version = "0.7", optional = true }
url = "2"

[dev-dependencies]
serde_json = "1"
stac-validate = { version = "0.1", path = "../stac-validate" }
tokio = { version = "1.37", features = ["macros"] }
tokio-test = "0.4"
tower = "0.4"
