[package]
name = "stac-server"
version = "0.1.1"
edition = "2021"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "SpatioTemporal Asset Catalog (STAC) API server"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[features]
default = ["axum", "memory-item-search"]
axum = ["dep:axum"]
memory-item-search = ["stac-api/geo"]
pgstac = ["dep:pgstac", "dep:bb8", "dep:bb8-postgres", "dep:tokio-postgres"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
http = "1"
pgstac = { version = "0.1", path = "../pgstac", optional = true }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.8", path = "../stac" }
stac-api = { version = "0.4", path = "../stac-api" }
stac-async = { version = "0.5", path = "../stac-async" }
thiserror = "1"
tokio = { version = "1.37", features = ["sync"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"

[dev-dependencies]
serde_json = "1"
stac-validate = { version = "0.2", path = "../stac-validate" }
tokio = { version = "1.37", features = ["macros"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
