[package]
name = "stac"
version = "0.5.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) specification"
homepage = "https://github.com/gadomski/stac-rs"
repository = "https://github.com/gadomski/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[features]
geo = ["dep:geo", "dep:geojson"]
reqwest = ["dep:reqwest"]
schemars = ["dep:schemars"]

[dependencies]
chrono = "0.4"
geo = { version = "0.26", optional = true }
geojson = { version = "0.24", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "blocking"] }
schemars = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
url = "2"

[dev-dependencies]
assert-json-diff = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
