[package]
name = "stac-validate"
version = "0.3.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Validate STAC objects with jsonschema"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[features]
blocking = ["tokio/rt"]

[dependencies]
jsonschema = "0.20"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1"
serde_json = "1"
stac = { version = "0.10.0", path = "../core" }
thiserror = "1"
tokio = "1"
tracing = "0.1"
url = "2"

[dev-dependencies]
geojson = "0.24"
stac = { version = "0.10.0", path = "../core", features = ["geo"] }
rstest = "0.22"
tokio = { version = "1", features = ["macros"] }
tokio-test = "0.4"

[[test]]
name = "examples"
required-features = ["blocking"]

[[test]]
name = "migrate"
required-features = ["blocking"]
