[package]
name = "stac-api"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) API specification"
version = "0.6.2"
keywords = ["geospatial", "stac", "metadata", "geo", "api"]
categories = ["science", "data-structures", "web-programming"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
client = [
    "dep:async-stream",
    "dep:futures",
    "dep:http",
    "dep:reqwest",
    "dep:tokio",
]
geo = ["dep:geo", "stac/geo"]
python = ["dep:pyo3", "dep:pythonize"]

[dependencies]
async-stream = { workspace = true, optional = true }
chrono.workspace = true
cql2.workspace = true
futures = { workspace = true, optional = true }
http = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
geo = { workspace = true, optional = true }
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
stac.workspace = true
stac-derive.workspace = true
pyo3 = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
url.workspace = true

[dev-dependencies]
geojson.workspace = true
mockito.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
