[package]
name = "stac-api"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) API specification"
version = "0.7.1"
keywords = ["geospatial", "stac", "metadata", "geo", "api"]
categories = ["science", "data-structures", "web-programming"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
client = [
    "dep:async-stream",
    "dep:futures",
    "dep:http",
    "dep:reqwest",
    "dep:tokio",
]
geo = ["dep:geo", "stac/geo"]

[dependencies]
async-stream = { workspace = true, optional = true }
chrono.workspace = true
cql2.workspace = true
futures = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
geojson.workspace = true
http = { workspace = true, optional = true }
indexmap.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
stac-derive.workspace = true
stac.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
geojson.workspace = true
mockito.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
