[package]
name = "stac-cli"
description = "Command line interface for stac-rs"
version = "0.5.3"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["duckdb", "pgstac"]
pgstac = ["stac-server/pgstac"]
duckdb = ["dep:stac-duckdb"]
duckdb-bundled = ["stac-duckdb/bundled"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stac = { workspace = true, features = [
    "geoparquet-compression",
    "object-store-all",
    "reqwest",
    "validate",
] }
stac-api = { workspace = true, features = ["client"] }
stac-duckdb = { workspace = true, optional = true }
stac-server = { workspace = true, features = ["axum"] }
tokio = { workspace = true, features = [
    "macros",
    "io-std",
    "rt-multi-thread",
    "fs",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
assert_cmd.workspace = true
rstest.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stacrs"
path = "src/main.rs"
doc = false
test = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
