[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "stacrs-cli"
description = "A STAC command-line interface written in Rust"
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
keywords = ["stac", "geospatial"]
dynamic = ["version"]
dependencies = []

[project.urls]
Repository = "https://github.com/stac-utils/stac-rs"
Issues = "https://github.com/stac-utils/stac-rs/issues"

[project.scripts]
stacrs = "stacrs_cli:main"

[tool.maturin]
no-default-features = true
features = ["python"]
module-name = "stacrs_cli"
