[package]
name = "stac-duckdb"
description = "Client for querying stac-geoparquet using DuckDB"
version = "0.1.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
arrow.workspace = true
duckdb.workspace = true
geoarrow = { workspace = true, features = ["parquet"] }
log.workspace = true
stac = { workspace = true, features = ["geoarrow"] }
stac-api.workspace = true
thiserror.workspace = true

[dev-dependencies]
geo.workspace = true
rstest.workspace = true
stac = { workspace = true, features = ["validate-blocking"] }
