[package]
name = "stac-duckdb"
description = "Client for querying stac-geoparquet using DuckDB"
version = "0.2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
bundled = ["duckdb/bundled"]

[dependencies]
arrow.workspace = true
chrono.workspace = true
cql2.workspace = true
duckdb.workspace = true
geo.workspace = true
geoarrow = { workspace = true, features = ["parquet"] }
geojson.workspace = true
log.workspace = true
serde_json.workspace = true
stac = { workspace = true, features = ["geoarrow", "geo"] }
stac-api.workspace = true
thiserror.workspace = true

[dev-dependencies]
geo.workspace = true
rstest.workspace = true
stac = { workspace = true, features = ["validate"] }
